--- a/ostoslista/package.json
+++ b/ostoslista/package.json
@@ -13,7 +13,9 @@
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "react-native-paper": "^5.14.5",
+    "react-native-safe-area-context": "~5.6.0"
   },
   "private": true
 }
